--- a/static/cards1.html
+++ b/static/cards1.html
@@ -1,23 +1,52 @@
 <style>
+body{
+
+background-color:lightblue;
+
+}
 .card{
-width:120;
-height:200;
-border:2px solid black;
-background-color:blue;
+
+position:absolute;
+text-align:center;
+border:4px solid white;
+background-color:pink;
 
 -moz-border-radius: 8px;
 -webkit-border-radius: 8px;
 -khtml-border-radius: 8px;
 border-radius: 8px;
+-moz-box-shadow: 3px 3px 4px #000;
+-webkit-box-shadow: 3px 3px 4px #000;
+box-shadow: 3px 3px 4px #000;
 
 padding:5px;
 margin:10px;
 
 }
 
+
+.card span{
+
 }
 
-.faceup{
+.deck{
+position:absolute;
+text-align:center;
+border:4px solid white;
+background-color:blue;
+
+-moz-border-radius: 8px;
+-webkit-border-radius: 8px;
+-khtml-border-radius: 8px;
+border-radius: 8px;
+-moz-box-shadow: 3px 3px 4px #000;
+-webkit-box-shadow: 3px 3px 4px #000;
+box-shadow: 3px 3px 4px #000;
+
+padding:5px;
+margin:10px;
+
+
 
 }
 
@@ -27,15 +56,32 @@ margin:10px;
 
 </style>
 
-<div class='card'>Foo</div>
+
  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
  
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+  <script src="wordlist.js"></script>
 
 <script type="text/javascript">
-$("html").append($("<div>").attr("id","newcard").addClass('card').addClass('movable'));
+//$("html").append($("<div>").attr("id","board"));
+//words=["Peace","Love","Dope"];
+numwords=words.length
+
+$("html").append($("<div>").attr("id","deck").addClass('deck').html("+"));
 
 $(".card").draggable();
+$("#deck").click(deal);
+
+function deal(){
+
+var rword=Math.floor(Math.random()*numwords)
+$("html").append($("<div>").attr("id","card").addClass('card').html(words[rword]).draggable());
+
+}
+
+
+
+
 
 
 
